changed some file paths like the link for the book now button on home page and the images and css path for interactive page

--- a/project/index.html
+++ b/project/index.html
@@ -24,7 +24,7 @@
                     <source media="(min-width: 500px)" srcset="./images/homepage-medium.webp">
                     <img class="welcome-img" src="./images/homepage-small-e.webp" alt="homepage hero image" width="400" height="200">
                 </picture>
-                <a class="button-box-enrol" href="/project/contact/index.html">Book Now</a>
+                <a class="button-box-enrol" href="contact/index.html">Book Now</a>
             </div>
             <div class="home-msg-container">
                 <h1 class="home-msg">
