--- a/project/interact/index.html
+++ b/project/interact/index.html
@@ -6,7 +6,7 @@
     <title>BMS-Educative Tool</title>
     <meta name="author" content="Maxwell Balla Nvani">
     <meta name="description" content="This site aims to provide educative information in an interactive manner">
-    <link rel="stylesheet" href="/project/styles/bms.css">
+    <link rel="stylesheet" href="../styles/bms.css">
     <script src="scripts/educativeTool.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,31 +22,31 @@
             <nav class="interact-icon-nav">
                 <a class="icon-link" href="">
                     <figure class="figure-icon">
-                        <img width="256" height="290" alt="Calculator Flat Icon Vector" src="/project/images/calculator-icon.webp">
+                        <img width="256" height="290" alt="Calculator Flat Icon Vector" src="../images/calculator-icon.webp">
                         <figcaption class="figcaption-icon">Mathematical Calculator</figcaption>
                     </figure>
                 </a>
                 <a class="icon-link" href="">
                     <figure class="figure-icon">
-                        <img width="256" height="290" src="/project/images/bmi-calculator-icon.webp" alt="">
+                        <img width="256" height="290" src="../images/bmi-calculator-icon.webp" alt="">
                         <figcaption class="figcaption-icon">BMI Calculator</figcaption>
                     </figure>
                 </a>
                 <a class="icon-link" href="">
                     <figure class="figure-icon">
-                        <img width="256" height="290" src="/project/images/ency-icon.webp" alt="">
+                        <img width="256" height="290" src="../images/ency-icon.webp" alt="">
                         <figcaption class="figcaption-icon">Encyclopedia</figcaption>
                     </figure>
                 </a>
                 <a class="icon-link" href="">
                     <figure class="figure-icon">
-                        <img width="256" height="290" src="/project/images/dictionary-icon.webp" alt="">
+                        <img width="256" height="290" src="../images/dictionary-icon.webp" alt="">
                         <figcaption class="figcaption-icon">Dictionary</figcaption>
                     </figure>
                 </a>
                 <a class="icon-link" href="">
                     <figure class="figure-icon">
-                        <img width="256" height="290" src="/project/images/library-icon.webp" alt="">
+                        <img width="256" height="290" src="../images/library-icon.webp" alt="">
                         <figcaption class="figcaption-icon">Library</figcaption>
                     </figure>
                 </a>
