--- a/project/index.html
+++ b/project/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Maxwell Balla Nvani">
     <meta name="description" content="This site aims to provide information about BMS online Institute, how to enrol as well as as contact address">
     <link rel="stylesheet" href="./styles/bms.css">
-    <script src="scripts/main.js" defer></script>
+    <script src="./scripts/main.js" type="module"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Sometype+Mono:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
