completed lastvisited, current year, last modified and currently working on displaying courses

--- a/project/about/index.html
+++ b/project/about/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Maxwell Balla Nvani">
     <meta name="description" content="This site aims to provide information about BMS online Institute, how to enrol as well as as contact address">
     <link rel="stylesheet" href="../styles/bms.css">
-    <script src="scripts/about.js" defer></script>
+    <script src="../scripts/about.js" type="module"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Sometype+Mono:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
@@ -23,6 +23,7 @@
         </div>
         <hr>
         <div class="about-section-two">
+            <p class="last-visited"></p>
             <p class="about-p">
                 BMS Online Institute was founded on the principle of EDUCATION WITHOUT BOUNDARIES. It was borne out of the fact that millions of Africans have no basic secondary education basically because of unavailability of affordable quality schools. BMS was founded in the year 2024 and the founder of BMS Online Institute is Dr. Maxwell Balla Nvani, a renowned Dentist. The current principal, Vice principal - admin and Vice principal - Academics of the school are Dr. Gloria Okpah, Dr. Larry Nvani and Mr. Pax Nvani respectively
             </p>
@@ -71,8 +72,18 @@
             <p class="about-sec-p">Students would be responsible for traveling to the designated exam centers for the examinations. Our fee structure is flexible. Parents have the option of paying 6-monthly. Also, we have endeavored to make this school very affordable and convenient. You don’t need to worry about security or transportation cost as your children would be taught everything right from home.</p>
             <hr>
             <p class="about-motto">
-                ...Building stronger Societies through knowledge.
+                . . .Building stronger Societies through knowledge.
             </p>
+        </div>
+        <div class="courses">
+            <hr>
+            <section class="courses-menu">
+                <h2>Courses Offered</h2>
+                <a class="all" href="#">All</a>
+                <a class="arts" href="#">Arts</a>
+                <a class="sciences" href="#">Sciences</a>
+            </section>
+            <hr class="line-sep">
         </div>
         <div class="courses-section">
 
