--- a/project/interact/index.html
+++ b/project/interact/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Maxwell Balla Nvani">
     <meta name="description" content="This site aims to provide educative information in an interactive manner">
     <link rel="stylesheet" href="../styles/bms.css">
-    <script src="scripts/educativeTool.js" defer></script>
+    <script src="../scripts/educativeTool.js" type="module"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Sometype+Mono:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
@@ -15,45 +15,46 @@
 <body>
     <div class="content">
         <header class="main-header"></header>
-    <main>
-        <h1 class="interact-h1">Welcome To BMS Educative Tool</h1>
-        <p class="interact-p">Kindly click on your desired category</p>
-        <div class="category-container">
-            <nav class="interact-icon-nav">
-                <a class="icon-link" href="">
-                    <figure class="figure-icon">
-                        <img width="256" height="290" alt="Calculator Flat Icon Vector" src="../images/calculator-icon.webp">
-                        <figcaption class="figcaption-icon">Mathematical Calculator</figcaption>
-                    </figure>
-                </a>
-                <a class="icon-link" href="">
-                    <figure class="figure-icon">
-                        <img width="256" height="290" src="../images/bmi-calculator-icon.webp" alt="">
-                        <figcaption class="figcaption-icon">BMI Calculator</figcaption>
-                    </figure>
-                </a>
-                <a class="icon-link" href="">
-                    <figure class="figure-icon">
-                        <img width="256" height="290" src="../images/ency-icon.webp" alt="">
-                        <figcaption class="figcaption-icon">Encyclopedia</figcaption>
-                    </figure>
-                </a>
-                <a class="icon-link" href="">
-                    <figure class="figure-icon">
-                        <img width="256" height="290" src="../images/dictionary-icon.webp" alt="">
-                        <figcaption class="figcaption-icon">Dictionary</figcaption>
-                    </figure>
-                </a>
-                <a class="icon-link" href="">
-                    <figure class="figure-icon">
-                        <img width="256" height="290" src="../images/library-icon.webp" alt="">
-                        <figcaption class="figcaption-icon">Library</figcaption>
-                    </figure>
-                </a>
-            </nav>
-        </div>
-    </main>
-    <footer class="main-footer"></footer>
+        <main>
+            <p class="last-visited"></p>
+            <h1 class="interact-h1">Welcome To BMS Educative Tool</h1>
+            <p class="interact-p">Kindly click on your desired category</p>
+            <div class="category-container">
+                <nav class="interact-icon-nav">
+                    <a class="icon-link" href="">
+                        <figure class="figure-icon">
+                            <img width="256" height="290" alt="Calculator Flat Icon Vector" src="../images/calculator-icon.webp">
+                            <figcaption class="figcaption-icon">Mathematical Calculator</figcaption>
+                        </figure>
+                    </a>
+                    <a class="icon-link" href="">
+                        <figure class="figure-icon">
+                            <img width="256" height="290" src="../images/bmi-calculator-icon.webp" alt="">
+                            <figcaption class="figcaption-icon">BMI Calculator</figcaption>
+                        </figure>
+                    </a>
+                    <a class="icon-link" href="">
+                        <figure class="figure-icon">
+                            <img width="256" height="290" src="../images/ency-icon.webp" alt="">
+                            <figcaption class="figcaption-icon">Encyclopedia</figcaption>
+                        </figure>
+                    </a>
+                    <a class="icon-link" href="">
+                        <figure class="figure-icon">
+                            <img width="256" height="290" src="../images/dictionary-icon.webp" alt="">
+                            <figcaption class="figcaption-icon">Dictionary</figcaption>
+                        </figure>
+                    </a>
+                    <a class="icon-link" href="">
+                        <figure class="figure-icon">
+                            <img width="256" height="290" src="../images/library-icon.webp" alt="">
+                            <figcaption class="figcaption-icon">Library</figcaption>
+                        </figure>
+                    </a>
+                </nav>
+            </div>
+        </main>
+        <footer class="main-footer"></footer>
     </div>
 </body>
 </html>
