--- a/project/public/footer.html
+++ b/project/public/footer.html
@@ -1,8 +1,8 @@
 <div class="non-social">
-    <p><a href="/project/about/index.html">About</a></p>
-    <p><a href="/project/contact/index.html">Contact Us</a></p>
+    <p><a href="../about/index.html">About</a></p>
+    <p><a href="../contact/index.html">Contact Us</a></p>
     <p class="flag">
-        <img class="flag-icon-lt" src="/project/images/nigeria.webp" alt="nigeria flag icon"> Nigeria <img class="flag-icon-rt" src="./images/nigeria.webp" alt="nigeria flag icon"><br>(Flag icon designed by Freepik from Flaticon)
+        <img class="flag-icon-lt" src="../images/nigeria.webp" alt="nigeria flag icon"> Nigeria <img class="flag-icon-rt" src="../images/nigeria.webp" alt="nigeria flag icon"><br>(Flag icon designed by Freepik from Flaticon)
     </p>
     <p class="name">BMS Online Institute &copy;<span id="currentyear"></span></p>
     <p id="lastModified">
@@ -11,18 +11,18 @@
 </div>
 <div class="social">
     <a href="http://facebook.com" target="_blank">
-        <img src="./images/facebook.png" alt="fb icon">
+        <img src="../images/facebook.png" alt="fb icon">
     </a>
     <a href="http://youtube.com" target="_blank">
-        <img src="./images/youtubelogo.png" alt="twitter icon">
+        <img src="../images/youtubelogo.png" alt="twitter icon">
     </a>
     <a href="http://instagram.com" target="_blank">
-        <img src="./images/instagram.png" alt="instagram icon">
+        <img src="../images/instagram.png" alt="instagram icon">
     </a>
     <a href="http://linkedin.com" target="_blank">
-        <img src="./images/linkedinlogo.png" alt="linkedin icon">
+        <img src="../images/linkedinlogo.png" alt="linkedin icon">
     </a>
     <a href="http://whatsapp.com" target="_blank">
-        <img src="./images/whatsapplogo.png" alt="whatsapp icon">
+        <img src="../images/whatsapplogo.png" alt="whatsapp icon">
     </a>
 </div>
