--- a/project/contact/index.html
+++ b/project/contact/index.html
@@ -7,13 +7,14 @@
     <meta name="author" content="Maxwell Balla Nvani">
     <meta name="description" content="This site aims to provide information about BMS online Institute, how to enrol as well as as contact address">
     <link rel="stylesheet" href="../styles/bms.css">
-    <script src="scripts/contact.js" defer></script>
+    <script src="../scripts/contact.js" type="module"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Sometype+Mono:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 </head>
-<body class="content">
-  <header class="main-header"></header>
+<body>
+  <div class="content">
+    <header class="main-header"></header>
   <main>
       <div class="contact-welcome">
           <picture>
@@ -28,7 +29,7 @@
               height="200"
             >
           </picture>
-          
+          <p class="last-visited"></p>
           <h1 class="contact-msg">CONTACT US TODAY</h1>
       </div>
       <hr>
@@ -156,8 +157,10 @@
         Facebook, Instagram, LinkedIn and YouTube channel
       </p>
       <p class="contact-motto">
-        ...Building stronger Societies through knowledge
+        . . .Building stronger Societies through knowledge
       </p>
   </main>
+  <footer class="main-footer"></footer>
+  </div>
 </body>
 </html>
