--- a/project/public/header.html
+++ b/project/public/header.html
@@ -1,12 +1,12 @@
 <div class="nav-bar-container">
-    <a class="logo-link" href="index.html">
-        <img src="./images/bbmslogo.webp" alt="Logo of BMS Online Institute" width="200" height="100">
+    <a class="logo-link" href="../index.html">
+        <img src="../images/bbmslogo.webp" alt="Logo of BMS Online Institute" width="200" height="100">
     </a>
     <nav>
         <a href="../index.html">Home</a>
         <a href="../about/index.html">About</a>
-        <a href="news/index.html">News Headlines</a>
-        <a href="interact/index.html">Interact</a>
-        <a href="contact/index.html">Contact Us</a>
+        <a href="../news/index.html">News Headlines</a>
+        <a href="../interact/index.html">Interact</a>
+        <a href="../contact/index.html">Contact Us</a>
     </nav>
 </div>
