finished maths calculator, courses section in about

--- a/project/interact/index.html
+++ b/project/interact/index.html
@@ -21,7 +21,7 @@
             <p class="interact-p">Kindly click on your desired category</p>
             <div class="category-container">
                 <nav class="interact-icon-nav">
-                    <a class="icon-link" href="">
+                    <a class="icon-link" href="./maths.html">
                         <figure class="figure-icon">
                             <img width="256" height="290" alt="Calculator Flat Icon Vector" src="../images/calculator-icon.webp">
                             <figcaption class="figcaption-icon">Mathematical Calculator</figcaption>
