--- a/project/index.html
+++ b/project/index.html
@@ -78,33 +78,35 @@
             </div>
         </main>
         <footer class="main-footer">
-            <div class="non-social">
-                <p><a href="./about/index.html">About</a></p>
-                <p><a href="./contact/index.html">Contact Us</a></p>
-                <p class="flag">
-                    <img class="flag-icon-lt" src="./images/nigeria.webp" alt="nigeria flag icon"> Nigeria <img class="flag-icon-rt" src="./images/nigeria.webp" alt="nigeria flag icon"><br>(Flag icon designed by Freepik from Flaticon)
-                </p>
-                <p class="name">BMS Online Institute &copy;<span id="currentyear"></span></p>
-                <p id="lastModified">
-                    
-                </p>
-            </div>
-            <div class="social">
-                <a href="http://facebook.com" target="_blank">
-                    <img src="./images/facebook.png" alt="fb icon">
-                </a>
-                <a href="http://youtube.com" target="_blank">
-                    <img src="./images/youtubelogo.png" alt="twitter icon">
-                </a>
-                <a href="http://instagram.com" target="_blank">
-                    <img src="./images/instagram.png" alt="instagram icon">
-                </a>
-                <a href="http://linkedin.com" target="_blank">
-                    <img src="./images/linkedinlogo.png" alt="linkedin icon">
-                </a>
-                <a href="http://whatsapp.com" target="_blank">
-                    <img src="./images/whatsapplogo.png" alt="whatsapp icon">
-                </a>
+            <div class="footer-div">
+                <div class="non-social">
+                    <p><a href="./about/index.html">About</a></p>
+                    <p><a href="./contact/index.html">Contact Us</a></p>
+                    <p class="flag">
+                        <img class="flag-icon-lt" src="./images/nigeria.webp" alt="nigeria flag icon"> Nigeria <img class="flag-icon-rt" src="./images/nigeria.webp" alt="nigeria flag icon"><br>(Flag icon designed by Freepik from Flaticon)
+                    </p>
+                    <p class="name">BMS Online Institute &copy;<span id="currentyear"></span></p>
+                    <p id="lastModified">
+                        
+                    </p>
+                </div>
+                <div class="social">
+                    <a href="http://facebook.com" target="_blank">
+                        <img src="./images/facebook.png" alt="fb icon">
+                    </a>
+                    <a href="http://youtube.com" target="_blank">
+                        <img src="./images/youtubelogo.png" alt="twitter icon">
+                    </a>
+                    <a href="http://instagram.com" target="_blank">
+                        <img src="./images/instagram.png" alt="instagram icon">
+                    </a>
+                    <a href="http://linkedin.com" target="_blank">
+                        <img src="./images/linkedinlogo.png" alt="linkedin icon">
+                    </a>
+                    <a href="http://whatsapp.com" target="_blank">
+                        <img src="./images/whatsapplogo.png" alt="whatsapp icon">
+                    </a>
+                </div>
             </div>
         </footer>
     </div>
