finished bmi calculator

--- a/project/interact/bmi.html
+++ b/project/interact/bmi.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMS-BMI</title>
     <link rel="stylesheet" href="../styles/bms.css">
-    <script src="../scripts/bmi.js" defer></script>
+    <script src="../scripts/bmi.js" type="module"></script>
 </head>
 <body>
-    <header class="main-header"></header>
-    <main></main>
-    <footer class="main-footer"></footer>
+    <div class="content">
+        <header class="main-header"></header>
+        <main class="bmi-main">
+            <p class="last-visited"></p>
+            <h1 class="bmi-instruction-p">To check your BMI, kindly click START</h1>
+
+        </main>
+        <footer class="main-footer"></footer>
+    </div>
 </body>
 </html>
