--- a/project/interact/index.html
+++ b/project/interact/index.html
@@ -27,9 +27,9 @@
                             <figcaption class="figcaption-icon">Mathematical Calculator</figcaption>
                         </figure>
                     </a>
-                    <a class="icon-link" href="">
+                    <a class="icon-link" href="./bmi.html">
                         <figure class="figure-icon">
-                            <img width="256" height="290" src="../images/bmi-calculator-icon.webp" alt="">
+                            <img width="256" height="290" src="../images/bmi-calculator-icon.webp" alt="bmi calculator icon">
                             <figcaption class="figcaption-icon">BMI Calculator</figcaption>
                         </figure>
                     </a>
