--- a/project/interact/bmi.html
+++ b/project/interact/bmi.html
@@ -12,7 +12,7 @@
         <header class="main-header"></header>
         <main class="bmi-main">
             <p class="last-visited"></p>
-            <h1 class="bmi-instruction-p">To check your BMI, kindly click START</h1>
+            <h1 class="bmi-instruction-p">To check your BMI, kindly click START<br>OR<br>click TRACK to check your recorded BMI data</h1>
 
         </main>
         <footer class="main-footer"></footer>
