finished bms project

--- a/project/contact/enquiry.html
+++ b/project/contact/enquiry.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BMS-News</title>
+    <title>BMS-Confirmation</title>
     <meta name="author" content="Maxwell Balla Nvani">
     <meta name="description" content="This site aims to provide headlines news around the globe">
     <link rel="stylesheet" href="../styles/bms.css">
-    <script src="../scripts/educativeTool.js" type="module"></script>
+    <script src="../scripts/enquiry.js" type="module"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Sometype+Mono:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
@@ -16,16 +16,13 @@
     <div class="content">
         <header class="main-header"></header>
         <main>
-            <div class="news-container">
-                <p class="last-visited"></p>
-                <nav>
-                    <a  href="./bbc.html">
-                        BBC Top News
-                    </a>
-                    <a href="./cnn.html">
-                        CNN Top News
-                    </a>
-                </nav>
+            <p class="last-visited"></p>
+            <h1 class="thankyou-heading">Thank You for your Interest in BMS Online Institute</h1>
+            <div class="form-result">
+
+            </div>
+            <div class="form-interest">
+
             </div>
         </main>
         <footer class="main-footer"></footer>
