--- a/project/index.html
+++ b/project/index.html
@@ -19,7 +19,8 @@
                 <a class="logo-link" href="../index.html">
                     <img src="./images/bbmslogo.webp" alt="Logo of BMS Online Institute" width="200" height="100">
                 </a>
-                <nav>
+                <button id="menu" aria-label="menu button"></button>
+                <nav class="header-nav">
                     <a href="./index.html">Home</a>
                     <a href="./about/index.html">About</a>
                     <a href="./news/index.html">News Headlines</a>
@@ -59,20 +60,20 @@
                 </section>
                 <section class="weather-quotes-container">
                     <aside class="fav-quote">
-                        <p>Quote of the Day</p>
+                        <p class="fav-quote-heading">Quote of the Day</p>
                     </aside>
                     <aside class="current-location">
-                        <p>Current Location</p>
+                        <p class="current-location-heading">Current Location</p>
     
                     </aside>
                     <aside class="current-weather">
-                        <p>Current Weather</p>
+                        <p class="current-weather-heading">Current Weather</p>
                     </aside>
                     <aside class="weather-forecast">
-                        <p>3-days Weather Forecast</p>
+                        <p class="forecast-heading">3-days Weather Forecast</p>
                     </aside>
                     <aside class="bms-location">
-                        <iframe src="" frameborder="0"></iframe>
+                        <iframe width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=7.444632053375245%2C9.082963935115881%2C7.4556827545166025%2C9.08821867182673&amp;layer=mapnik&amp;marker=9.085591313104747%2C7.450157403945923" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=9.085591&amp;mlon=7.450157#map=17/9.085591/7.450157">View Larger Map</a></small>
                     </aside>
                 </section>
             </div>
