--- a/project/public/header.html
+++ b/project/public/header.html
@@ -2,7 +2,8 @@
     <a class="logo-link" href="../index.html">
         <img src="../images/bbmslogo.webp" alt="Logo of BMS Online Institute" width="200" height="100">
     </a>
-    <nav>
+    <button id="menu" aria-label="menu button"></button>
+    <nav class="header-nav">
         <a href="../index.html">Home</a>
         <a href="../about/index.html">About</a>
         <a href="../news/index.html">News Headlines</a>
