made some changes to conform with lighthouse and css overview

--- a/project/index.html
+++ b/project/index.html
@@ -73,7 +73,7 @@
                         <p class="forecast-heading">3-days Weather Forecast</p>
                     </aside>
                     <aside class="bms-location">
-                        <iframe width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=7.444632053375245%2C9.082963935115881%2C7.4556827545166025%2C9.08821867182673&amp;layer=mapnik&amp;marker=9.085591313104747%2C7.450157403945923" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=9.085591&amp;mlon=7.450157#map=17/9.085591/7.450157">View Larger Map</a></small>
+                        <iframe title="location of BMS institute" width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=7.444632053375245%2C9.082963935115881%2C7.4556827545166025%2C9.08821867182673&amp;layer=mapnik&amp;marker=9.085591313104747%2C7.450157403945923" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=9.085591&amp;mlon=7.450157#map=17/9.085591/7.450157">View Larger Map</a></small>
                     </aside>
                 </section>
             </div>
