--- a/project/interact/index.html
+++ b/project/interact/index.html
@@ -16,24 +16,26 @@
     <div class="content">
         <header class="main-header"></header>
         <main>
-            <p class="last-visited"></p>
-            <h1 class="interact-h1">Welcome To BMS Educative Tool</h1>
-            <p class="interact-p">Kindly click on your desired category</p>
-            <div class="category-container">
-                <nav class="interact-icon-nav">
-                    <a class="icon-link" href="./maths.html">
-                        <figure class="figure-icon">
-                            <img width="256" height="290" alt="Calculator Flat Icon Vector" src="../images/calculator-icon.webp">
-                            <figcaption class="figcaption-icon">Mathematical Calculator</figcaption>
-                        </figure>
-                    </a>
-                    <a class="icon-link" href="./bmi.html">
-                        <figure class="figure-icon">
-                            <img width="256" height="290" src="../images/bmi-calculator-icon.webp" alt="bmi calculator icon">
-                            <figcaption class="figcaption-icon">BMI Calculator</figcaption>
-                        </figure>
-                    </a>
-                </nav>
+            <div class="interact-main">
+                <p class="last-visited"></p>
+                <h1 class="interact-h1">Welcome To BMS Educative Tool</h1>
+                <p class="interact-p">Kindly click on your desired category</p>
+                <div class="category-container">
+                    <nav class="interact-icon-nav">
+                        <a class="icon-link" href="./maths.html">
+                            <figure class="figure-icon">
+                                <img width="256" height="290" alt="Calculator Flat Icon Vector" src="../images/calculator-icon.webp">
+                                <figcaption class="figcaption-icon">Mathematical Calculator</figcaption>
+                            </figure>
+                        </a>
+                        <a class="icon-link" href="./bmi.html">
+                            <figure class="figure-icon">
+                                <img width="256" height="290" src="../images/bmi-calculator-icon.webp" alt="bmi calculator icon">
+                                <figcaption class="figcaption-icon">BMI Calculator</figcaption>
+                            </figure>
+                        </a>
+                    </nav>
+                </div>
             </div>
         </main>
         <footer class="main-footer"></footer>
